@@ -1,3 +1,7 @@
+2008-09-18  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Tuner/AdjustVisibility.cs: correctly process public nested types.
+
 2008-09-12  Jb Evain  <jbevain@novell.com>
 
 	* Makefile: tune System.ServiceModel.Web.
